# cookiecutter-api

./: .dockerignore  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml
tests/: test_project_files.py
{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.__project_slug}}/tests/: test_package_importable.py
{{cookiecutter.__project_slug}}/{{cookiecutter. __package_name}}/: placeholder.py  utils.py
